--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">buyer_map</string>
     <string name="title_activity_maps">Map</string>
+    <string name="button_ok">확인</string>
 </resources>
