--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">buyer_map</string>
     <string name="title_activity_maps">Map</string>
-    <string name="textview_message" formatted="false">%1$20s %2$20s %3$20s %4$20s \n</string>
+    <string name="textview_message1" formatted="false">%1$20s \n</string>
+    <string name="textview_message2" formatted="false">%1$20s \n</string>
+    <string name="textview_message3" formatted="false">%1$20s \n</string>
+    <string name="textview_message4" formatted="false">%1$20s \n</string>
 </resources>
